test/cases/compile_errors/extern_variable_has_no_type.zig
extern var foo;
pub export fn entry() void {
    foo;
}

// error
//
// :1:8: error: unable to infer variable type
